[gd_scene load_steps=14 format=3 uid="uid://d0qn664v61ibh"]

[ext_resource type="PackedScene" uid="uid://b3xqb4wrpa43a" path="res://scenes/title_menu_button.tscn" id="1_ex71d"]
[ext_resource type="Script" path="res://scripts/settings_container.gd" id="1_f80q6"]
[ext_resource type="Theme" uid="uid://lji4cyvbkwl1" path="res://resources/default_font_theme.tres" id="1_ppdf7"]
[ext_resource type="Texture2D" uid="uid://bd8vi0jwty80e" path="res://resources/slider_grabber.tres" id="2_y4ahn"]
[ext_resource type="StyleBox" uid="uid://buyqi8tle4bqv" path="res://resources/button_style_flat.tres" id="3_hdbmn"]
[ext_resource type="Texture2D" uid="uid://bl1wfhwq1varl" path="res://resources/slider_grabber_highlight.tres" id="4_ba53t"]
[ext_resource type="Texture2D" uid="uid://boaeed4avk8ws" path="res://resources/white_box_16.tres" id="7_p4b7y"]
[ext_resource type="Texture2D" uid="uid://btv46ids6oe0f" path="res://resources/gray_box_16.tres" id="8_1op1d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1irnm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dkmup"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j0pxa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_45lem"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cctok"]

[node name="SettingsContainer" type="MarginContainer"]
custom_minimum_size = Vector2(300, 300)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_f80q6")

[node name="BackButton" parent="." instance=ExtResource("1_ex71d")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../GridContainer/MasterVolumeSlider")
focus_next = NodePath("../GridContainer/MasterVolumeSlider")
focus_previous = NodePath(".")
text = "Back"

[node name="SettingsLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_ppdf7")
theme_override_font_sizes/font_size = 16
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 3

[node name="MasterVolumeLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "Master Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
focus_neighbor_top = NodePath("../../BackButton")
focus_neighbor_bottom = NodePath("../MusicVolumeSlider")
focus_next = NodePath("../MusicVolumeSlider")
focus_previous = NodePath("../../BackButton")
theme = ExtResource("1_ppdf7")
theme_override_icons/grabber = ExtResource("2_y4ahn")
theme_override_icons/grabber_highlight = ExtResource("4_ba53t")
theme_override_styles/grabber_area = ExtResource("3_hdbmn")
theme_override_styles/grabber_area_highlight = ExtResource("3_hdbmn")
max_value = 1.0
step = 0.05
value = 1.0

[node name="MasterVolumeValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolumeLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "Music Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
focus_neighbor_top = NodePath("../MasterVolumeSlider")
focus_neighbor_bottom = NodePath("../SFXVolumeSlider")
focus_next = NodePath("../SFXVolumeSlider")
focus_previous = NodePath("../MasterVolumeSlider")
theme = ExtResource("1_ppdf7")
theme_override_icons/grabber = ExtResource("2_y4ahn")
theme_override_icons/grabber_highlight = ExtResource("4_ba53t")
theme_override_styles/grabber_area = ExtResource("3_hdbmn")
theme_override_styles/grabber_area_highlight = ExtResource("3_hdbmn")
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolumeValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolumeLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "SFX Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
focus_neighbor_top = NodePath("../MusicVolumeSlider")
focus_neighbor_bottom = NodePath("../AmbientVolumeSlider")
focus_next = NodePath("../AmbientVolumeSlider")
focus_previous = NodePath("../MusicVolumeSlider")
theme = ExtResource("1_ppdf7")
theme_override_icons/grabber = ExtResource("2_y4ahn")
theme_override_icons/grabber_highlight = ExtResource("4_ba53t")
theme_override_styles/grabber_area = ExtResource("3_hdbmn")
theme_override_styles/grabber_area_highlight = ExtResource("3_hdbmn")
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXVolumeValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmbientVolumeLabel" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "Ambient Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AmbientVolumeSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
focus_neighbor_top = NodePath("../SFXVolumeSlider")
focus_neighbor_bottom = NodePath("../../GridContainer2/AllowAberrationCheckBox")
focus_next = NodePath("../../GridContainer2/AllowAberrationCheckBox")
focus_previous = NodePath("../SFXVolumeSlider")
theme = ExtResource("1_ppdf7")
theme_override_icons/grabber = ExtResource("2_y4ahn")
theme_override_icons/grabber_highlight = ExtResource("4_ba53t")
theme_override_styles/grabber_area = ExtResource("3_hdbmn")
theme_override_styles/grabber_area_highlight = ExtResource("3_hdbmn")
max_value = 1.0
step = 0.05
value = 1.0

[node name="AmbientVolumeValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlankLabel4" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
horizontal_alignment = 2
vertical_alignment = 1

[node name="BlankLabel5" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
horizontal_alignment = 2
vertical_alignment = 1

[node name="BlankLabel6" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
horizontal_alignment = 2
vertical_alignment = 1

[node name="GridContainer2" type="GridContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/h_separation = 8
columns = 2

[node name="AllowAberrationLabel" type="Label" parent="GridContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "Allow Aberration"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AllowAberrationCheckBox" type="CheckBox" parent="GridContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../GridContainer/AmbientVolumeSlider")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../AllowPixelationCheckBox")
focus_next = NodePath("../AllowPixelationCheckBox")
focus_previous = NodePath("../../GridContainer/AmbientVolumeSlider")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1irnm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dkmup")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j0pxa")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_45lem")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cctok")
theme_override_icons/checked = ExtResource("7_p4b7y")
theme_override_icons/unchecked = ExtResource("8_1op1d")
disabled = true
flat = true

[node name="AllowPixelationLabel" type="Label" parent="GridContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "Allow Pixelation"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AllowPixelationCheckBox" type="CheckBox" parent="GridContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../AllowAberrationCheckBox")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../ShowDebugCheckBox")
focus_next = NodePath("../ShowDebugCheckBox")
focus_previous = NodePath("../AllowAberrationCheckBox")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1irnm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dkmup")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j0pxa")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_45lem")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cctok")
theme_override_icons/checked = ExtResource("7_p4b7y")
theme_override_icons/unchecked = ExtResource("8_1op1d")
disabled = true
flat = true

[node name="ShowDebugLabel" type="Label" parent="GridContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
text = "Show Debug Stats"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ShowDebugCheckBox" type="CheckBox" parent="GridContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../AllowPixelationCheckBox")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../AllowPixelationCheckBox")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1irnm")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dkmup")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j0pxa")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_45lem")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cctok")
theme_override_icons/checked = ExtResource("7_p4b7y")
theme_override_icons/unchecked = ExtResource("8_1op1d")
flat = true

[node name="BlankLabel" type="Label" parent="GridContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("1_ppdf7")
horizontal_alignment = 2
vertical_alignment = 1
